--- a/css/site.css
+++ b/css/site.css
@@ -17,6 +17,13 @@ img{
 	margin: 15px;
 }
 
+.well{
+	margin: 0 15px 15px 15px;
+}
+
+.sort-filter-btn{
+	margin-left:15px;
+}
 
 .year-input{
 	width:60px;
