--- a/NotIMDB/app/views/pages/home.html.erb
+++ b/NotIMDB/app/views/pages/home.html.erb
@@ -31,13 +31,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Not IMDB</a>
+      <a class="navbar-brand" href="">Not IMDB</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="">Home</a></li>
         <li><a href="request.html">Request Movie Addition</a></li>
 
       </ul>
@@ -55,7 +55,7 @@
             <li><a href="#">Another action</a></li>
             <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="sign-up.html">Sign up</a></li>
+            <li><a href="sign-up.html.erb">Sign up</a></li>
           </ul>
         </li>
       </ul>
