--- a/NotIMDB/app/views/pages/home.html.erb
+++ b/NotIMDB/app/views/pages/home.html.erb
@@ -8,8 +8,8 @@
     <title>Movie Template</title>
 
     <!-- Bootstrap -->
-    <link href="vendor/assets/stylesheets/bootstrap.min.css" rel="stylesheet">
-	<link href="vendor/assets/stylesheets/site.css" rel="stylesheet">
+    <link href="../../../vendor/assets/stylesheets/bootstrap.min.css" rel="stylesheet">
+	<link href="../../../vendor/assets/stylesheets/site.css" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -182,6 +182,6 @@
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="vendor/assets/javascripts/bootstrap.min.js"></script>
+    <script src="../../../vendor/assets/javascripts/bootstrap.min.js"></script>
   </body>
 </html>
