--- a/NotIMDB/app/views/layouts/_header.html.erb
+++ b/NotIMDB/app/views/layouts/_header.html.erb
@@ -8,12 +8,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-       <%= link_to "Not IMDB", home_path, id: "navbar-brand" %>
+       
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+      	<li><%= link_to "Not IMDB", home_path, id: "navbar-brand" %></li>
         <li><%= link_to "Movie Database", index_path %></li>
         <li><%= link_to "Request Movie Addition", request_path %></li>
 
