small updates on request

--- a/NotIMDB/app/views/pages/request.html.erb
+++ b/NotIMDB/app/views/pages/request.html.erb
@@ -56,7 +56,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2"for="rating">Rating:</label>
 				<div class="col-sm-10">
-				@rating =	<select class="form-control" placeholder="Rating">.html_safe
+				<select class="form-control" placeholder="Rating">.html_safe
 						<option>1/5</option>
 						<option>2/5</option>
 						<option>3/5</option>
@@ -68,7 +68,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="description">Description:</label>
 				<div class="col-sm-10">
-					@description<textarea type="text" class="form-control" id="description" placeholder="Enter Description" rows="3"></textarea>.html_safe
+					<textarea type="text" class="form-control" id="description" placeholder="Enter Description" rows="3"></textarea>.html_safe
 				</div>
 			</div>
 			<button type="submit" class="btn btn-default">Submit</button>
