--- a/NotIMDB/app/views/movie_reqs/show.html.erb
+++ b/NotIMDB/app/views/movie_reqs/show.html.erb
@@ -45,5 +45,5 @@
   <%= @movie_req.description %>
 </p>
 
-<%= link_to 'Edit', edit_movie_req_path(@movie_req) %> |
-<%= link_to 'Back', movie_reqs_path %>
+<%= link_to "Edit", edit_movie_req_path(@movie_req) %> |
+<%= link_to "Back", movie_reqs_path %>
