--- a/NotIMDB/app/views/pages/home.html.erb
+++ b/NotIMDB/app/views/pages/home.html.erb
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Not IMDB</title>
     
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
     <%= csrf_meta_tags %>
 	
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
