--- a/NotIMDB/app/views/movies/index.html.erb
+++ b/NotIMDB/app/views/movies/index.html.erb
@@ -20,7 +20,7 @@
   </thead>
 
   <tbody>
-    <% Movie.all.each do |movie| %>
+    <% @movie.each do |movie| %>
       <tr>
         <td><%= movie.id %></id>
         <td><%= movie.title %></td>
