--- a/NotIMDB/app/views/users/new.html.erb
+++ b/NotIMDB/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
       <%= f.label :password_hint, "Password Hint" %>
-      <%= f.password_field :password_hint, class: 'form-control' %>
+      <%= f.text_field :password_hint, class: 'form-control' %>
       
       <%= f.submit "Submit", class: "btn btn-primary" %>
     <% end %>
