--- a/NotIMDB/app/views/movies/_form.html.erb
+++ b/NotIMDB/app/views/movies/_form.html.erb
@@ -37,6 +37,6 @@
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-default' %>
   </div>
 <% end %>
