--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -1,51 +1,37 @@
+<div id="container">
+		<h1><%= @movie.title %></h1>
+
+		<h3>
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+		</h3>
+		
 <p id="notice"><%= notice %></p>
 
-
-
-<p>
-  <strong>Title:</strong>
-  <%= @movie.title %>
-</p>
-
-<p>
-  <strong>Genre:</strong>
-  <%= @movie.genre %>
-</p>
-
-<p>
-  <strong>Director:</strong>
-  <%= @movie.director %>
-</p>
-
-<p>
-  <strong>Actor1:</strong>
-  <%= @movie.actor1 %>
-</p>
-
-<p>
-  <strong>Actor2:</strong>
-  <%= @movie.actor2 %>
-</p>
-
-<p>
-  <strong>Actor3:</strong>
-  <%= @movie.actor3 %>
-</p>
-
-<p>
-  <strong>Releaseyr:</strong>
-  <%= @movie.releaseyr %>
-</p>
+	<div class="row">
+			<div class="col-md-4">
+				<img src="img/inside_out_poster.jpg">
+			</div>
+			<div class="col-md-8">
+			<p><%= @movie.description %></p>
+			<ul>
+				<li>Directed by <%= @movie.director %></li>
+				<li>Starring <%= @movie.actor1 %>, <%= @movie.actor2 %>, and <%= 		@movie.actor3 %></li>
+				<li>Released <%= @movie.releaseyr %></li>
+				<li>Genre: <%= @movie.genre %></li>
+			</ul>
+			</div>
+	</div>
 
 <p>
   <strong>Rating:</strong>
   <%= @movie.rating %>
 </p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @movie.description %>
-</p>
+</div>
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', index_path %>
