--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -13,7 +13,7 @@
 
 	<div class="row">
 			<div class="col-md-4">
-				<img src="img/inside_out_poster.jpg">
+				<img src= <%= @movie.picture_link %> />
 			</div>
 			<div class="col-md-8">
 			<p><%= @movie.description %></p>
