--- a/NotIMDB/app/views/layouts/application.html.erb
+++ b/NotIMDB/app/views/layouts/application.html.erb
@@ -29,9 +29,9 @@
       <%= yield %>      
       
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="NotIMDB/app/assets/javascripts/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="NotIMDB/app/assets/javascripts/bootstrap.min.js"></script>
     </div>
 </body>
 </html>
