--- a/NotIMDB/app/views/pages/home.html.erb
+++ b/NotIMDB/app/views/pages/home.html.erb
@@ -20,125 +20,125 @@
   </head>
   
   <body>
-	<nav class="navbar navbar-default">
-	<div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">Not IMDB</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="request.html">Request Movie Addition</a></li>
-       
-      </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account<span class="caret"></span></a>
-			<ul class="dropdown-menu">
-				<li><a href="#">Action</a></li>
-				<li><a href="#">Another action</a></li>
-				<li><a href="#">Something else here</a></li>
-				<li role="separator" class="divider"></li>
-				<li><a href="sign-up.html">Sign up</a></li>
-			</ul>
-        </li>
-      </ul>
-	</div><!-- /.navbar-collapse -->
-	</div><!-- /.container-fluid -->
-	</nav>
-
-
-	<div class="container">
+  <div class="container">
+      
+	<div id="container">
 		<h1>Featured Movies</h1>
-		
+
 		<div class="row">
-<<<<<<< HEAD
-			<a href="/show1" class="movieCard col-md-4">
-			<% movie = Movie.find(1) %>
-=======
+			<div class="col-sm-6">
+				<button class="btn btn-primary sort-filter-btn" type="button" data-toggle="collapse" data-target="#collapseFilter" aria-expanded="false" aria-controls="collapseExample">
+				  Filter by...
+				</button>
+				<div class="collapse" id="collapseFilter">
+					<div class="well row">
+					<div class="dropdown col-sm-6">
+					  <button class="btn btn-default dropdown-toggle" type="button" id="filterGenre" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Genre
+						<span class="caret"></span>
+					  </button>
+					  <ul class="dropdown-menu" aria-labelledby="filterGenre">
+						<li><a href="#">Action</a></li>
+						<li><a href="#">Adventure</a></li>
+						<li><a href="#">Animated</a></li>
+						<li><a href="#">Comedy</a></li>
+						<li><a href="#">Drama</a></li>
+						<li><a href="#">Romance</a></li>
+						<li><a href="#">Sci-Fi</a></li>
+					  </ul>
+					</div>
+					<div class="dropdown col-sm-6">
+					  <button class="btn btn-default dropdown-toggle" type="button" id="filterRating" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Rating
+						<span class="caret"></span>
+					  </button>
+					  <ul class="dropdown-menu" aria-labelledby="filterRating">
+						<li><a href="#">1/5</a></li>
+						<li><a href="#">2/5</a></li>
+						<li><a href="#">3/5</a></li>
+						<li><a href="#">4/5</a></li>
+						<li><a href="#">5/5</a></li>
+					  </ul>
+					</div>
+				  </div>
+				</div>
+			</div>
+
+			<div class="col-sm-6">
+				<button class="btn btn-primary sort-filter-btn" type="button" data-toggle="collapse" data-target="#collapseSort" aria-expanded="false" aria-controls="collapseExample">
+				  Sort by...
+				</button>
+				<div class="collapse" id="collapseSort">
+					<div class="well row">
+					<div class="dropdown col-sm-6">
+					  <button class="btn btn-default dropdown-toggle" type="button" id="sortAlphabetical" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Alphabetical
+						<span class="caret"></span>
+					  </button>
+					  <ul class="dropdown-menu" aria-labelledby="sortAlphabetical">
+						<li><a href="#">A to Z</a></li>
+						<li><a href="#">Z to A</a></li>
+					  </ul>
+					</div>
+					<div class="dropdown col-sm-6">
+					  <button class="btn btn-default dropdown-toggle" type="button" id="sortRating" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						Rating
+						<span class="caret"></span>
+					  </button>
+					  <ul class="dropdown-menu" aria-labelledby="sortRating">
+						<li><a href="#">High to Low</a></li>
+						<li><a href="#">Low to High</a></li>
+					  </ul>
+					</div>
+				  </div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
 			<% movie = Movie.find(1) %>
 			<%= link_to movie_path(movie.id), class:"movieCard col-md-4" do%>
->>>>>>> 4b164825a16b5fbb2a73feb1121c5853bd136812
 				<h3><%= movie.title %></h3>
 				<img src="http://ia.media-imdb.com/images/M/MV5BMTMyNzI4OTA5OV5BMl5BanBnXkFtZTcwMDQ2MjAxNA@@._V1_SX640_SY720_.jpg">
 			<% end %>
 
-<<<<<<< HEAD
-			<a href="/show" class="movieCard col-md-4">
-			<% movie = Movie.find(2) %>
-=======
 			<% movie = Movie.find(2) %>
 			<%= link_to movie_path(movie.id), class:"movieCard col-md-4" do%>
->>>>>>> 4b164825a16b5fbb2a73feb1121c5853bd136812
 				<h3><%= movie.title %></h3>
 				<img src="http://ia.media-imdb.com/images/M/MV5BMjM2MDgxMDg0Nl5BMl5BanBnXkFtZTgwNTM2OTM5NDE@._V1_SX214_AL_.jpg">
 			<% end %>
 
-<<<<<<< HEAD
-			<a href="/show" class="movieCard col-md-4">
-			<% movie = Movie.find(32) %>
-=======
 			
 			<% movie = Movie.find(32) %>
 			<%= link_to movie_path(movie.id), class:"movieCard col-md-4" do%>			
->>>>>>> 4b164825a16b5fbb2a73feb1121c5853bd136812
 				<h3><%= movie.title %></h3>
 				<img src="http://ia.media-imdb.com/images/M/MV5BMTUyMTE0ODcxNF5BMl5BanBnXkFtZTgwODE4NDQzNTE@._V1_SY317_CR2,0,214,317_AL_.jpg">
 			<% end %>
 		</div>
 
 		<div class="row">
-<<<<<<< HEAD
-			<a href="/show" class="movieCard col-md-4">
-			<% movie = Movie.find(17) %>
-=======
 
 			<% movie = Movie.find(17) %>
 			<%= link_to movie_path(movie.id), class:"movieCard col-md-4" do%>
->>>>>>> 4b164825a16b5fbb2a73feb1121c5853bd136812
 				<h3><%= movie.title %></h3>
 				<img src="http://ia.media-imdb.com/images/M/MV5BMTkwNzAwNDA4N15BMl5BanBnXkFtZTgwMTA2MDcwNzE@._V1_SX214_AL_.jpg">
 			<% end %>
 
 
-<<<<<<< HEAD
-			<a href="/show" class="movieCard col-md-4">
-			<% movie = Movie.find(28) %>
-=======
 			<% movie = Movie.find(28) %>
 			<%= link_to movie_path(movie.id), class:"movieCard col-md-4" do%>
->>>>>>> 4b164825a16b5fbb2a73feb1121c5853bd136812
 				<h3><%= movie.title %></h3>
 				<img src="http://ia.media-imdb.com/images/M/MV5BODU4MjU4NjIwNl5BMl5BanBnXkFtZTgwMDU2MjEyMDE@._V1_SX214_AL_.jpg">
 			<% end %>
 
-<<<<<<< HEAD
-			<a href="/show" class="movieCard col-md-4">
-			<% movie = Movie.find(13) %>
-=======
 			
 			<% movie = Movie.find(13) %>
 			<%= link_to movie_path(movie.id), class:"movieCard col-md-4" do%>
->>>>>>> 4b164825a16b5fbb2a73feb1121c5853bd136812
 				<h3><%= movie.title %></h3>
 				<img src="http://ia.media-imdb.com/images/M/MV5BMjExMDUzODE1N15BMl5BanBnXkFtZTgwNTU5NTYxMTE@._V1_SX214_AL_.jpg">
 			<% end %>
 		</div>
+	</div>
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
