adding not working comments

--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -30,6 +30,13 @@
   		<strong>Rating:</strong>
   		<%= @movie.rating %>
 		</p>
+		
+		<%= render :partial => @movie %>
+		
+		<h2>Comments</h2>
+ 	<div id="comments">
+         <%= render :partial => @movie.comments %>
+ 	</div>
 	</div>
 
 
