--- a/NotIMDB/app/views/movies/index.html.erb
+++ b/NotIMDB/app/views/movies/index.html.erb
@@ -10,10 +10,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div>
-					<button class="btn btn-primary sort-filter-btn" type="button" data-toggle="collapse" data-target="#collapseFilter" aria-expanded="false" aria-controls="collapseExample">
-					  Filter by...
-					</button>
-					<div class="collapse" id="collapseFilter">
+					<div>
 						<div class="well row">
 						<div class="dropdown col-sm-6">
 						 Genre: <br> 
@@ -34,10 +31,7 @@
 	
 			<div class="col-sm-6">
 				<div>
-					<button class="btn btn-primary sort-filter-btn" type="button" data-toggle="collapse" data-target="#collapseSort" aria-expanded="false" aria-controls="collapseExample">
-					  Sort by...
-					</button>
-					<div class="collapse" id="collapseSort">
+					<div>
 						<div class="well row">
 						<div class="dropdown col-sm-6">
 							Sort By: <br>
