fixed request page

--- a/NotIMDB/app/views/pages/request.html.erb
+++ b/NotIMDB/app/views/pages/request.html.erb
@@ -75,7 +75,7 @@
 		</form>
 	</div>
 
-</--  <% MovieReq.create(id:,title:,director:,actor1:,actor2:,actor3:,releaseyr:,rating: @rating,description:) -->
+	<% MovieReq.create(id:,title:,director:,actor1:,actor2:,actor3:,releaseyr:,rating: @rating,description:)
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
