--- a/NotIMDB/app/views/movies/_form.html.erb
+++ b/NotIMDB/app/views/movies/_form.html.erb
@@ -1,40 +1,128 @@
-<%= form_for (@movie) do |f| %>
-  
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title, class: 'form-control' %>
+<%= form_for (@movie), :html => {:class => "form-horizontal"} do |f| %>
+<!--   		<form class="form-horizontal">
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="title">Movie Title:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="title" placeholder="Enter Title">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2"for="genre">Genre:</label>
+				<div class="col-sm-10">
+					<select class="form-control" placeholder="Genre">
+						<option>Action</option>
+						<option>Adventure</option>
+						<option>Animated</option>
+						<option>Comedy</option>
+						<option>Drama</option>
+						<option>Romance</option>
+						<option>Sci-Fi</option>
+					</select>
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="director">Director:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="director" placeholder="Enter Director">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="first-actor">First Actor:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="first-actor" placeholder="Enter First Actor">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="second-actor">Second Actor:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="second-actor" placeholder="Enter Second Actor">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="third-actor">Third Actor:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control" id="third-actor" placeholder="Enter Third Actor">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="release-year">Release Year:</label>
+				<div class="col-sm-10">
+					<input type="text" class="form-control year-input" id="release-year" maxlength="4" size="4" placeholder="Year">
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2"for="rating">Rating:</label>
+				<div class="col-sm-10">
+					<select class="form-control" placeholder="Rating">
+						<option>1/5</option>
+						<option>2/5</option>
+						<option>3/5</option>
+						<option>4/5</option>
+						<option>5/5</option>
+					</select>
+				</div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2" for="description">Description:</label>
+				<div class="col-sm-10">
+					<textarea type="text" class="form-control" id="description" placeholder="Enter Description" rows="3"></textarea>
+				</div>
+			</div>
+			<button type="submit" class="btn btn-default">Submit</button>
+		</form> -->
+  <div class="form-group">
+    <%= f.label :title, for:"title", class:"control-label col-sm-2"%>
+	<div class="col-sm-8">
+		<%= f.text_field :title, id:"title", class: 'form-control' %>
+	</div>
   </div>
-  <div class="field">
-    <%= f.label :genre %><br>
-    <%= f.text_field :genre, class: 'form-control' %>
+  <div class="form-group">
+    <%= f.label :genre, class:"control-label col-sm-2" %>
+	<div class="col-sm-8">
+    <%= f.text_field :genre, class:'form-control' %>
+	</div>
   </div>
-  <div class="field">
-    <%= f.label :director %><br>
-    <%= f.text_field :director, class: 'form-control' %>
+  <div class="form-group">
+    <%= f.label :director, class:"control-label col-sm-2" %>
+	<div class="col-sm-8">
+    <%= f.text_field :director, class:'form-control' %>
+	</div>
   </div>
-  <div class="field">
-    <%= f.label :actor1 %><br>
-    <%= f.text_field :actor1, class: 'form-control' %>
+  <div class="form-group">
+    <%= f.label :actor1, class:"control-label col-sm-2" %>
+	<div class="col-sm-8">
+    <%= f.text_field :actor1, class:'form-control' %>
+	</div>
   </div>
-  <div class="field">
-    <%= f.label :actor2 %><br>
-    <%= f.text_field :actor2, class: 'form-control'  %>
+  <div class="form-group">
+    <%= f.label :actor2, class:"control-label col-sm-2" %>
+	<div class="col-sm-8">
+    <%= f.text_field :actor2, class:'form-control'  %>
+	</div>
   </div>
-  <div class="field">
-    <%= f.label :actor3 %><br>
-    <%= f.text_field :actor3, class: 'form-control'  %>
+  <div class="form-group">
+    <%= f.label :actor3, class:"control-label col-sm-2" %>
+	<div class="col-sm-8">
+    <%= f.text_field :actor3, class:'form-control'  %>
+	</div>
   </div>
-  <div class="field">
-    <%= f.label :releaseyr %><br>
-    <%= f.number_field :releaseyr, class: 'form-control'  %>
+  <div class="form-group">
+    <%= f.label :releaseyr, class:"control-label col-sm-2" %>
+	<div class="col-sm-8">
+    <%= f.number_field :releaseyr, class:'form-control'  %>
+	</div>
   </div>
-  <div class="field">
-    <%= f.label :rating %><br>
-    <%= f.number_field :rating, class: 'form-control'  %>
+  <div class="form-group">
+    <%= f.label :rating, class:"control-label col-sm-2" %>
+	<div class="col-sm-8">
+    <%= f.number_field :rating, class:'form-control'  %>
+	</div>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description, class: 'form-control'  %>
+  <div class="form-group">
+    <%= f.label :description, class:"control-label col-sm-2" %>
+	<div class="col-sm-8">
+    <%= f.text_area :description, class:'form-control'  %>
+	</div>
   </div>
   <div class="actions">
 
