--- a/NotIMDB/app/views/movies/edit.html.erb
+++ b/NotIMDB/app/views/movies/edit.html.erb
@@ -1,6 +1,7 @@
+<div id="container">
 <h1>Editing Movie</h1>
 
-<%= render 'form' %>
-
+	<%= render 'form' %>
+</div>
 <%= link_to 'Show', @movie %> |
 <%= link_to 'Back', movies_path %>
