--- a/NotIMDB/app/views/movies/new.html.erb
+++ b/NotIMDB/app/views/movies/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New Movie</h1>
-
-<%= render 'form' %>
+<div id="container">
+	<h1>New Movie</h1>
+	<%= render 'form' %>
+</div>
 <%= link_to 'Back', home_path %>
