--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -13,7 +13,7 @@
 
 		<div class="row">
 			<div class="col-md-4">
-				<img src= "<%= @movie.picture_link %>" />
+				<img src= "#" />
 			</div>
 			<div class="col-md-8">
 			<p><%= @movie.description %></p>
@@ -34,9 +34,9 @@
 		<%= render :partial => @movie %>
 		
 		<h2>Comments</h2>
- 	<div id="comments">
-         <%= render :partial => @movie.comments %>
- 	</div>
+ 		<div id="comments">
+         	<%= render :partial => @movie.comments %>
+ 		</div>
 	</div>
 
 
