--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -13,7 +13,7 @@
 
 		<div class="row">
 			<div class="col-md-4">
-				<img src= "<%= @movie.picture_link %>" />
+				<%= image_tag @movie.picture_link %>
 			</div>
 			<div class="col-md-8">
 			<p><%= @movie.description %></p>
@@ -32,12 +32,7 @@
 		</p>
 		
 		
-		
-		<h2>Comments</h2>
- 	<div id="comments">
-         <%= render :partial => @movie.comments %>
- 	</div>
-	</div>
+
 
 
 
