big comment changes

--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -37,8 +37,16 @@
  		<div id="comments">
          	<%= render :partial => @movie.comments %>
  		</div>
+ 		
+ 		<%= form_for [@post, Comment.new] do |f| %>
+        <p>
+                <%= f.label :body, "New comment" %><br/>
+                <%= f.text_area :body %>
+        </p>
+        <p><%= f.submit "Add comment" %></p>
+		<% end %>
 	</div>
-
+	
 
 
 
