--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -39,13 +39,16 @@
          	<%= render :partial => @movie.comments %>
  		</div>
  		
- 		<%= form_for [@post, Comment.new] do |f| %>
-        <p>
-                <%= f.label :body, "New comment" %><br/>
-                <%= f.text_area :body %>
-        </p>
-        <p><%= f.submit "Add comment" %></p>
+		<form class="form-inline" role="form">
+		<div class="form-group">
+ 			<%= form_for [@movie, Comment.new] do |f| %>
+        
+            <%= f.label :body, "New comment" %><br/>
+            <%= f.text_area :body %>
+			<%= f.submit "Add comment" %>
+		</div>
 		<% end %>
+		</form>
 	</div>
 	
 
