last commit before my eyes bleed. jk. more comments stuff

--- a/NotIMDB/app/views/comments/_comment.html.erb
+++ b/NotIMDB/app/views/comments/_comment.html.erb
@@ -5,5 +5,7 @@
                 </strong>
                 <br/>
                 <%= comment.body %>
+                <br/>
+                By: <%= comment.user %>
         </p>
 <% end %>
