--- a/NotIMDB/app/views/movies/index.html.erb
+++ b/NotIMDB/app/views/movies/index.html.erb
@@ -51,9 +51,8 @@
 		<%= link_to movie_path(movie.id), class:"movieCard col-md-4" do %>
 			<% movie.title %>
 				<h3><%= movie.title %></h3>
-				<h3><%= movie.genre %></h3>
-				<h3><%= movie.rating %></h3>
-
+				 <span style="float: left;"><b>Genre:</b> <%= movie.genre %></span>
+				 <span style="float: right;"><b>Rating:</b> <%= movie.rating %></span>
 		<% end %>
     <% end %>
 	</div>
