hey look, its me again making more comment changes

--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -36,17 +36,9 @@
 
 		
 		<h2>Comments</h2>
- 		<% @movie.comments.each do |comment| %>
-  	<p>
-   		 <strong>Commenter:</strong>
-    		<%= comment.user %>
-  	</p>
- 
- 	 <p>
-    	<strong>Comment:</strong>
-    		<%= comment.body %>
-  	</p>
-	<% end %>
+ 		<div id="comments">
+         <%= render :partial => @movie.comments %>
+		</div>
  		
 		<form class="form-inline" role="form">
 		<div class="form-group">
