--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -35,7 +35,21 @@
 		<%= content_tag(:iframe, nil, src: @movie.video_link)%>
 
 		
-		
+		<h2>Comments</h2>
+ 		<div id="comments">
+         <%= render :partial => 'movies/comment', :collection => @movie.comments %>
+		</div>
+ 		
+		<form class="form-inline" role="form">
+		<div class="form-group">
+ 			<%= form_for [@movie, Comment.new] do |f| %>
+        
+            <%= f.label :body, "New comment" %><br/>
+            <%= f.text_area :body %>
+			<%= f.submit "Add comment" %>
+		</div>
+		<% end %>
+		</form>
 	</div>
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', index_path %>
