--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -1,6 +1,7 @@
 <div id="container">
 <p id="notice"><%= notice %></p>
 
+<%if @movie.viewable?%>
 		<h1><%= @movie.title %></h1>
 
 		<h3>
@@ -54,4 +55,43 @@
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', index_path %>
 
+<%else %>
+<h1>Movies Waiting for Approval</h1>
+		<div class="panel panel-primary">
+			<h3 class="panel-heading panel-title"><%=@movie.title%></h3>
+			<div class="panel-body">
+				<p><%= @movie.description %></p>
+				<ul>
+					<li>Directed by <%= @movie.director %></li>
+				    <li>Starring  <%= @movie.actor1 %>, <%= @movie.actor2 %>, and  <%= @movie.actor3 %></li>
+				    <li>Released <%= @movie.releaseyr %></li>
+				    <li>Genre: <%= @movie.genre %></li>
+				</ul>
+				<div class="form-group">
+					<label class="control-label col-sm-2.5" for="trailer">Link to Trailer:</label>
+					<input type="text" class="form-control" id="trailer" placeholder="Enter Link">			
+				</div>
+				<div class="form-group">
+					<label class="control-label col-sm-2.5" for="purchase">Link to Purchase:</label>
+					<input type="text" class="form-control" id="purchase" placeholder="Enter Link">					
+				</div>
+				<div class="form-group">
+					<label for="exampleInputFile">Input Poster</label>
+					<input type="file" id="exampleInputFile">
+					<p class="help-block">(preferred file type here)</p>
+				</div>
+			
+			</div>
+			<div class="panel-footer">
+				<div class="btn btn-success"><%= label :viewable, "Accept", true, :value => true %>
+				<%= f.radio_button :viewable %></div>
+				<div class="btn btn-danger">Deny
+				<%= button_to "Deny", @movie, method: :delete, data: { confirm: "You sure?" } %></div>
+			</div>
+		
+		</div>
+	</div>
 
+
+
+<%end%>
