--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -36,7 +36,7 @@
 		<%= content_tag(:iframe, nil, src: @movie.video_link)%>
 
 		
-		<h2>Comments</h2>
+		<!-- <h2>Comments</h2>
  		<div id="comments">
          <%= render :partial => 'movies/comment', :collection => @movie.comments %>
 		</div>
@@ -50,12 +50,13 @@
 			<%= f.submit "Add comment" %>
 		</div>
 		<% end %>
-		</form>
+		</form> -->
 	</div>
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', index_path %>
 
 <%else %>
+<% if current_user.admin?%>
 <h1>Movies Waiting for Approval</h1>
 		<div class="panel panel-primary">
 			<h3 class="panel-heading panel-title"><%=@movie.title%></h3>
@@ -83,15 +84,16 @@
 			
 			</div>
 			<div class="panel-footer">
-				<div class="btn btn-success"><%= label :viewable, "Accept", true, :value => true %>
-				<%= f.radio_button :viewable %></div>
+				<div class="btn btn-success">
+			    <%= button_to "Accept", toggleon_movie_url(@movie), method: :put%></div>
 				<div class="btn btn-danger">Deny
 				<%= button_to "Deny", @movie, method: :delete, data: { confirm: "You sure?" } %></div>
 			</div>
 		
 		</div>
 	</div>
-
-
-
+<%else%>
+  
+  <h1> You don't have access to this site! </h1>
+  <%end%>
 <%end%>
