--- a/NotIMDB/app/assets/stylesheets/application.css
+++ b/NotIMDB/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  * file per style scope.
  *
  */
- @import "bootstrap-sprokets";
+ @import "bootstrap-sprockets";
  @import "bootstrap";
 
 
@@ -28,10 +28,6 @@
 
  h1, h2, h3{
  	text-align: center;
- }
-
- img{
- 	margin: 15px;
  }
 
  .well{
@@ -99,3 +95,6 @@
 	max-width:215px;
 }
 
+.panel {
+	padding:0;
+}
