--- a/NotIMDB/app/views/layouts/_header.html.erb
+++ b/NotIMDB/app/views/layouts/_header.html.erb
@@ -1,43 +1,27 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-       
-    </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
       	<li><%= link_to "Not IMDB", home_path, id: "navbar-brand" %></li>
         <li><%= link_to "Movie Database", index_path %></li>
+		<% if !current_user.nil?%>
         <li><%= link_to "Request Movie Addition", request_path %></li>
-        <% if !current_user.nil?%>
-        <li><%= link_to "All Requested Movies", requestedmovies_path %></li>
+			<% if current_user.admin?%>
+			<li><%= link_to "All Requested Movies", requestedmovies_path %></li>
+			<% end %>
         <% end %>
       </ul>
-	  
-      <%= form_tag(movies_path, :method => "get", class: "navbar-form navbar-right") do %>
-  <%= text_field_tag :search, params[:search], placeholder: "Search", class: "form-control", :search => params[:search] %>
-  <%= submit_tag "Search", class: 'btn btn-default' %>
-<% end %>
-      
-      <ul class="nav navbar-nav navbar-right">
+	 
+	
+
+	<ul class="nav navbar-nav navbar-right">
       <% if logged_in? %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account<span class="caret"></span></a>
-          <ul class="dropdown-menu">           
-            <li><%= link_to "Profile", current_user %></li>
-            <li><%= link_to "Settings", edit_user_path(current_user) %></li>                       
-            <li role="separator" class="divider"></li>
+          <ul class="nav navbar-nav">           
             <li><%= link_to "Logout", logout_path, method: "delete" %></li>   
           </ul>
-        </li>
+        
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
           <li><%= link_to "Sign Up", signup_path %></li>
