--- a/NotIMDB/app/views/movies/show.html.erb
+++ b/NotIMDB/app/views/movies/show.html.erb
@@ -36,30 +36,17 @@
 		<%= content_tag(:iframe, nil, src: @movie.video_link)%>
 
 		
-		<h2>Comments</h2>	
- 		<div class="col-md-8">
-    		<% if @movie.comments.any? %>
-      	<h3>Comments (<%= @movie.comments.count %>)</h3>
-     	 	<p class= "comments">
-        	<%= render @movie.comments %>
-   		</p>
-    	<% end %>
-  		</div>
- 		
-		<form class="form-inline" role="form">
-		<div class="form-group">
- 			<%= form_for [@movie, Comment.new] do |f| %>
-        
-            <%= f.label :body, "New comment" %><br/>
-            <%= f.text_area :body %>
-			<%= f.submit "Add comment" %>
-		</div>
+		</br>
+		<% if !current_user.nil?%>
+		<% if current_user.admin?%>
+			<%= link_to 'Destroy', :method => :destroy %>
+			|<%= link_to 'Edit', edit_movie_path(@movie) %>
 		<% end %>
-		</form> 
+		<% end %>
+		
+		<%= link_to 'Back', index_path %>
 	</div>
-<%= link_to 'Edit', edit_movie_path(@movie) %> |
-<%= link_to 'Back', index_path %>
+ 
 
-<%else %>
 
 <%end%>
