--- a/NotIMDB/app/views/movies/allrequest.html.erb
+++ b/NotIMDB/app/views/movies/allrequest.html.erb
@@ -2,36 +2,38 @@
 	<h1>Movies Waiting for Approval</h1>
 	<% @movies.each do |movie| %>
 	<%if !movie.viewable?%>
-	<div class="row">
-		<div class="panel panel-primary col-sm-4">
-			<h3 class="panel-heading panel-title"><%= movie.title%></h3>
-			<div class="panel-body">
-				<p><%= movie.description %></p>
-				<ul>
-					<li>Directed by <%= movie.director %></li>
-					<li>Starring  <%= movie.actor1 %>, <%= movie.actor2 %>, and  <%= movie.actor3 %></li>
-					<li>Released <%= movie.releaseyr %></li>
-					<li>Genre: <%= movie.genre %></li>
-				</ul>
-				<div class="form-group">
-					<label class="control-label col-sm-2.5" for="poster_link">Link to Poster:</label>
-					<input type="text" class="form-control" id="poster_link" placeholder="Enter Link">					
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2.5" for="video_link">Link to Trailer:</label>
-					<input type="text" class="form-control" id="video_link" placeholder="Enter Link">			
-				</div>
-				<div class="form-group">
-					<label class="control-label col-sm-2.5" for="purchase">Link to Purchase:</label>
-					<input type="text" class="form-control" id="purchase" placeholder="Enter Link">					
-				</div>
+	
+	<div class="panel panel-primary">
+		<h3 class="panel-heading panel-title"><%= movie.title%></h3>
+		<div class="panel-body">
+			<p><%= movie.description %></p>
+			<ul>
+				<li>Directed by <%= movie.director %></li>
+				<li>Starring  <%= movie.actor1 %>, <%= movie.actor2 %>, and  <%= movie.actor3 %></li>
+				<li>Released <%= movie.releaseyr %></li>
+				<li>Genre: <%= movie.genre %></li>
+			</ul>
+			<div class="form-group">
+				<label class="control-label col-sm-2.5" for="poster_link">Link to Poster:</label>
+				<input type="text" class="form-control" id="poster_link" placeholder="Enter Link">					
 			</div>
-			<div class="panel-footer">
-				<%= button_to "Accept", toggleon_movie_url(movie), class:"btn btn-success", method: :put%>
-				<%= button_to "Deny", movie, class:"btn btn-danger", method: :delete, data: { confirm: "You sure?" } %>
+			<div class="form-group">
+				<label class="control-label col-sm-2.5" for="video_link">Link to Trailer:</label>
+				<input type="text" class="form-control" id="video_link" placeholder="Enter Link">			
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2.5" for="purchase">Link to Purchase:</label>
+				<input type="text" class="form-control" id="purchase" placeholder="Enter Link">					
+			</div>
+		</div>
+		<div class="panel-footer">
+			<div class="row">
+				<%= button_to "Accept", toggleon_movie_url(movie), class:"btn btn-success col-md-4", method: :put%>
+				<%= button_to "Deny", movie, class:"btn btn-danger col-md-4", method: :delete, data: { confirm: "You sure?" } %>
 			</div>
 		</div>
 	</div>
+	
 	<% end %>
 	<% end %>
 <%else%>
