Added pictures on index page

--- a/NotIMDB/app/views/movies/index.html.erb
+++ b/NotIMDB/app/views/movies/index.html.erb
@@ -59,6 +59,7 @@
 				<h3><%= movie.title %></h3>
 				 <span style="float: left;"><b>Genre:</b> <%= movie.genre %></span>
 				 <span style="float: right;"><b>Rating:</b> <%= movie.rating %></span>
+				 <%= image_tag movie.picture_link %>
 		  <% end %>
 		  <%end%>
     <% end %>
